# globalplatform-apis

./: .gitignore  BUILD WITH ANT JAVACARD.md  MANIFEST.in  README.md  build.bat  pyproject.toml  setup.py
BROKER/1.0/: README.TXT
BROKER/1.0/exports/org/globalplatform/broker/javacard/: broker.exp
BROKER/1.0/exports23/org/globalplatform/broker/javacard/: broker.exp
BROKER/1.1/: README.TXT
BROKER/1.1/exports/org/globalplatform/broker/javacard/: broker.exp
BROKER/1.1/exports23/org/globalplatform/broker/javacard/: broker.exp
CONTACTLESS/1.0/: Readme.txt
CONTACTLESS/1.2/: README.TXT
CONTACTLESS/1.2/exports23/org/globalplatform/contactless/javacard/: contactless.exp
CONTACTLESS/1.3/: README.TXT
CONTACTLESS/1.3/exports23/org/globalplatform/contactless/javacard/: contactless.exp
CONTACTLESS/1.4.1/: README.TXT
CONTACTLESS/1.4.1/exports23/org/globalplatform/contactless/javacard/: contactless.exp
CORE/1.0/: Readme.txt
CORE/1.1/: Readme.txt
CORE/1.1/exports/org/globalplatform/javacard/: globalplatform.cap
CORE/1.2/: Readme.txt
CORE/1.3/exports/org/globalplatform/javacard/: globalplatform.cap
CORE/1.4/: NOTE.txt  Readme.txt
CORE/1.5/: README.TXT
CORE/1.8/: README.TXT
CORE/1.8/exports/org/globalplatform/javacard/: globalplatform.exp
CORE/1.8/exports23/org/globalplatform/javacard/: globalplatform.exp
SCPP/1.0/: README.TXT
SCPP/1.0/exports/org/globalplatform/securechannel/javacard/: securechannel.exp
SCPP/1.1/: README.TXT
SCPP/1.2/: README.TXT
UPGRADE/1.0/: README.TXT
UPGRADE/1.1/: README.TXT
gpapis/: __init__.py
(+14 files in other folders)
